# COMP0130_22-23_Topic_03

./: README.md
.github/workflows/: main.yml
Coursework_03/: .gitignore  Build.bat  Build.sh  ForWSL2Users.md  README.md
Coursework_03/Evaluation/: kitti_to_tum.py
Coursework_03/Scripts/: Build_Source.bat  Build_Source.sh  Build_ThirdParty.bat  Build_ThirdParty.sh  ValidateVCPKG.bat  install_mac_dependencies.bash  install_mac_dependencies.sh  install_ubuntu_dependencies.sh  install_vckpg_dependencies.bat  tmp.txt
Coursework_03/Source/: CMakeLists.txt
Coursework_03/Source/Examples/: CMakeLists.txt
Coursework_03/Source/Examples/Monocular/: CMakeLists.txt  mono_euroc.cc  mono_kitti.cc  mono_tum.cc
Coursework_03/Source/Examples/RGB-D/: CMakeLists.txt  rgbd_tum.cc
Coursework_03/Source/Examples/ROS/ORB_SLAM2/src/: ros_mono.cc  ros_rgbd.cc  ros_stereo.cc
Coursework_03/Source/Examples/ROS/ORB_SLAM2/src/AR/: ViewerAR.cc  ViewerAR.h  ros_mono_ar.cc
Coursework_03/Source/Examples/Stereo/: CMakeLists.txt  stereo_euroc.cc  stereo_kitti.cc
Coursework_03/Source/Libraries/: CMakeLists.txt
Coursework_03/Source/Libraries/ORB_SLAM2/: CMakeLists.txt
Coursework_03/Source/Libraries/ORB_SLAM2/include/: Converter.h  Frame.h  FrameDrawer.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h
Coursework_03/Source/Libraries/ORB_SLAM2/src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBVocabulary.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
Coursework_03/Source/Vocabulary/: CMakeLists.txt
